gcc/testsuite/rust/rustc/ui/dont-suggest-private-trait-method.rs
struct T;

fn main() {
    T::new();
// { dg-error ".E0599." "" { target *-*-* } .-1 }
}

